# arctex

./: CMakeLists.txt  Matrix.cuh  matrix_mul.cu
synchronous_functions/: synchronous_functions.cuh
tests/: test_synchronous_functions.cuh  tests_main.cu
